[package]
name = "blinker"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "1.0.0"
heapless = "0.8"
embassy-time = { version = "0.3.2" }

[dev-dependencies]
futures-lite = "2.5.0"
embedded-hal-mock = "0.11.1"
embassy-executor = { version = "0.6.3", features = ["task-arena-size-32768", "arch-std", "executor-thread", "log", "integrated-timers"] }
embassy-time = { version = "0.3.2", features = ["std"] }

[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "8954c053fbb0ce83d4bcdec4bf84a26874421696" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "8954c053fbb0ce83d4bcdec4bf84a26874421696" }
