[package]
name = "blinker"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "1.0.0"
heapless = "0.8"
embassy-time = { version = "0.3.2" }

[dev-dependencies]
futures-lite = "2.5.0"
embedded-hal-mock = "0.11.1"
embassy-time = { version = "0.3.2", features = ["std", "generic-queue"] }
embassy-futures = "0.1.1"

[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "8954c053fbb0ce83d4bcdec4bf84a26874421696" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "8954c053fbb0ce83d4bcdec4bf84a26874421696" }
